add_subdirectory(add)
# add_subdirectory(and)
# add_subdirectory(eq)
# add_subdirectory(ge)
# add_subdirectory(gt)
# add_subdirectory(le)
# add_subdirectory(lt)
# add_subdirectory(mul)
# add_subdirectory(div)
# add_subdirectory(ne)
# add_subdirectory(or)
# add_subdirectory(sub)
# add_subdirectory(xor)
# add_subdirectory(mux)
# add_subdirectory(inv)

# add_subdirectory(conversion/a2b)
# add_subdirectory(conversion/a2y)
# add_subdirectory(conversion/b2a)
# add_subdirectory(conversion/b2y)
# add_subdirectory(conversion/y2a)
# add_subdirectory(conversion/y2b)